<resources>
    <string name="app_name">HomeFinder</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">LOGIN</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>

    <string name="title_activity_sign_up">SIGN UP</string>
    <string name="sign_up">SIGN UP</string>
    <string name="full_names">Full names</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="terms_of_service_prefix">I have read the</string>
    <string name="terms_of_service_suffix"><a href="https://www.google.com/">terms of service</a></string>
    <string name="full_name_error">Full name cannot be less than 2 characters!</string>
    <string name="email_address_error">Your email address is invalid!</string>
    <string name="invalid_phone_error">You entered an invalid phone number!</string>
    <string name="user_name_error">Your username must be at least 5 characters!</string>
    <string name="invalid_password_error">Password must be at least 8 characters!</string>
    <string name="confirm_terms_error">You did not read terms of service!</string>

</resources>
