<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/content_view"
    android:background="#FFF"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:text="@string/login" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:paddingStart="16dp"
        android:textSize="18sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:gravity="start|center_vertical"
        android:background="@drawable/rounded_corners_edittext"
        android:hint="@string/username_hint"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:paddingStart="16dp"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:gravity="start|center_vertical"
        android:textSize="18sp"
        android:hint="@string/password_hint"
        android:background="@drawable/rounded_corners_edittext"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="18sp"
        android:clickable="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_corners_button"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_account_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginStart="32dp"
            android:layout_height="wrap_content"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/register_now"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingStart="8dp"
            android:layout_marginEnd="32dp"
            android:textColor="#ff0000"
            android:text="@string/register_now" />

    </LinearLayout>
</LinearLayout>